--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -24,8 +24,8 @@
       </a>
     </li>
     <li>
-      <a href="unsafe-expressions.html">
-        <strong>Unsafe Expressions !{ }</strong>
+      <a href="complex-expressions.html">
+        <strong>Complex Expressions</strong>
         <span>Full JavaScript in templates: operators, ternary, methods</span>
       </a>
     </li>
